--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expresstestrest",
+  "name": "simple-server-skeleton",
   "version": "1.0.0",
   "description": "test rest api",
   "main": "index.js",
@@ -7,10 +7,25 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raidenz/simple-server-skeleton.git"
+  },
+  "keywords": [
+    "bookshelfjs",
+    "mysql",
+    "express"
+  ],
+  "author": "Raidenz",
+  "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "bookshelf": "^0.10.3",
     "express": "^4.14.0",
-    "pug": "^2.0.0-beta6"
+    "knex": "^0.12.6",
+    "lodash": "^4.17.4",
+    "mysql": "^2.13.0",
+    "pug": "^2.0.0-beta6",
+    "when": "^3.7.7"
   }
 }
