--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "babel": "nodemon app.js --exec babel-node --presets es2015,stage-2",
+    "buildtestfromlib": "babel lib -d dist --presets es2015,stage-2",
+    "build": "babel -d dist --presets es2015,stage-2",
+    "serve": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,11 +25,17 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "bookshelf": "^0.10.3",
+    "bookshelf-slug": "^0.3.2",
     "express": "^4.14.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "mysql": "^2.13.0",
     "pug": "^2.0.0-beta6",
     "when": "^3.7.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0"
   }
 }
