--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "bookshelf": "^0.10.3",
     "bookshelf-slug": "^0.3.2",
     "express": "^4.14.0",
+    "jwt-simple": "^0.5.1",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "pug": "^2.0.0-beta6",
     "when": "^3.7.7"
   },
