--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
     "bookshelf": "^0.10.3",
+    "bookshelf-bcrypt": "^2.1.0",
     "bookshelf-slug": "^0.3.2",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.1",
