--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-2\"",
     "babel": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "buildtestfromlib": "babel lib -d dist --presets es2015,stage-2",
     "build": "babel -d dist --presets es2015,stage-2",
+    "build2": "babel src -s -D -d dist --presets es2015,stage-2",
     "serve": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +25,8 @@
   "author": "Raidenz",
   "license": "MIT",
   "dependencies": {
+    "babel-node": "^6.5.3",
+    "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
     "bookshelf": "^0.10.3",
@@ -32,6 +36,8 @@
     "jwt-simple": "^0.5.1",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
+    "morgan": "^1.8.1",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
