--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-2\"",
     "babel": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "buildtestfromlib": "babel lib -d dist --presets es2015,stage-2",
-    "build": "npm run clean && babel -d ./dist ./ --ignore node_modules,seeds,seed,temp --presets es2015,stage-2",
+    "build": "npm run clean && babel -d ./dist ./ --ignore node_modules,seeds,seed,temp,migrations --presets es2015,stage-2",
     "build2": "babel src -s -D -d dist --presets es2015,stage-2",
     "serve": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-node": "^6.5.3",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
@@ -51,5 +52,14 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "faker": "^3.1.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ],
+    "plugins": [
+      "add-module-exports"
+    ]
   }
 }
