--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "start": "nodemon app.js",
     "clean": "rm -rf dist && mkdir dist",
+    "copydist": "cp -r ./views ./dist && cp -r ./public ./dist",
     "build-css": "node-sass scss/app.scss public/css/app.css",
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-2\"",
     "babel": "nodemon app.js --exec babel-node --presets es2015,stage-2",
     "buildtestfromlib": "babel lib -d dist --presets es2015,stage-2",
-    "build": "npm run clean && babel -d ./dist ./ --ignore node_modules,seeds,seed,temp,migrations --presets es2015,stage-2",
-    "build2": "babel src -s -D -d dist --presets es2015,stage-2",
+    "build": "npm run clean && npm run copydist && babel -d ./dist ./ --ignore node_modules,seeds,seed,temp,migrations,public --presets es2015,stage-2 --no-comments",
+    "build2": "babel public -s -D -d dist --presets es2015,stage-2 --no-comments",
     "serve": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serveEs6": "node dist/app-ES6.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data:rollback": "knex migrate:rollback",
+    "data:latest": "knex migrate:latest",
+    "data:seed": "knex seed:run",
+    "data:reload": "npm run data:rollback && npm run data:latest && npm run data:seed"
   },
   "repository": {
     "type": "git",
@@ -28,7 +34,6 @@
   "license": "MIT",
   "dependencies": {
     "babel-node": "^6.5.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.23.0",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
@@ -45,10 +50,12 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "pug": "^2.0.0-beta6",
+    "sqlite3": "^3.1.8",
     "when": "^3.7.7"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "faker": "^3.1.0"
