--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jwt-simple": "^0.5.1",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
