--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
     "copydist": "cp -r ./app/views ./dist && cp -r ./app/public ./dist",
-    "build": "npm run clean && npm run copydist && babel -d ./dist ./app --ignore node_modules,public,views --presets es2015,stage-2 --no-comments --compact true",
-    "start": "NODE_PATH=./app nodemon app/app-ES6.js --exec babel-node --presets es2015,stage-2",
-    "serve": "NODE_PATH=./dist NODE_ENV=production nodemon app.js",
+    "build": "npm run clean && npm run copydist && babel -d ./dist ./app",
+    "onvagrant": "cross-env NODE_PATH=./app nodemon app/app-ES6.js -L --exec babel-node",
+    "start": "cross-env NODE_PATH=./app nodemon app/app-ES6.js --exec babel-node",
+    "serve": "cross-env NODE_PATH=./dist NODE_ENV=production nodemon app.js",
     "build-css": "node-sass scss/app.scss public/css/app.css",
     "data:rollback": "knex migrate:rollback",
     "data:latest": "knex migrate:latest",
@@ -38,6 +39,7 @@
     "bookshelf-mass-assignment": "^0.1.2",
     "bookshelf-modelbase": "^2.10.3",
     "bookshelf-slug": "^0.3.2",
+    "cross-env": "^4.0.0",
     "express": "^4.14.0",
     "jsend": "^1.0.2",
     "jwt-simple": "^0.5.1",
